[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/background_scenes/infinite_background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/background_scenes/logo.png" type="Texture" id=2]
[ext_resource path="res://scenes/background_scenes/play.png" type="Texture" id=3]
[ext_resource path="res://scenes/background_scenes/credits.png" type="Texture" id=4]
[ext_resource path="res://scenes/background_scenes/background.gd" type="Script" id=5]
[ext_resource path="res://sounds/click.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/menu.wav" type="AudioStream" id=7]

[node name="background" type="Node2D"]
position = Vector2( 160.494, 80.1516 )
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" parent="." instance=ExtResource( 1 )]

[node name="background_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -7.0

[node name="click_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = -76.5
margin_right = 97.0
margin_bottom = 76.5
custom_constants/margin_top = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
margin_top = 5.0
margin_right = 194.0
margin_bottom = 153.0

[node name="logo" type="TextureRect" parent="MarginContainer/VBoxContainer2"]
margin_right = 194.0
margin_bottom = 83.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer2"]
margin_top = 87.0
margin_right = 194.0
margin_bottom = 148.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/CenterContainer"]
margin_left = 46.0
margin_right = 148.0
margin_bottom = 61.0
custom_constants/separation = 1

[node name="play" type="TextureButton" parent="MarginContainer/VBoxContainer2/CenterContainer/VBoxContainer"]
margin_right = 102.0
margin_bottom = 30.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="credits" type="TextureButton" parent="MarginContainer/VBoxContainer2/CenterContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 102.0
margin_bottom = 61.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/VBoxContainer2/CenterContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/CenterContainer/VBoxContainer/credits" to="." method="_on_credits_pressed"]
